--- a/pages/MemberInfo/applicationWithdrawal/applicationWithdrawal.wxml
+++ b/pages/MemberInfo/applicationWithdrawal/applicationWithdrawal.wxml
@@ -9,7 +9,7 @@
     <view class="am-update weui-flex weui_bottom">
       <image src='/images/vip.png'></image>
       <text>卡主姓名：</text>
-      <input name="username" value='{{username}}' disabled='true'/>
+      <input name="username" value='{{userInfo.UserName}}' disabled='true'/>
     </view>
     <view class="am-update weui-flex weui_bottom">
       <image src='/images/vip.png'></image>
@@ -19,7 +19,7 @@
     <view class="am-update weui-flex weui_bottom">
       <image src='/images/vip.png'></image>
       <text>开户行：</text>
-      <input name="bank" />
+      <input name="bank" value='{{userInfo.BanName}}' />
     </view>
     <view class="am-update weui-flex weui_bottom">
       <image src='/images/vip.png'></image>
