--- a/pages/shoppingCar/shoppingCar.wxml
+++ b/pages/shoppingCar/shoppingCar.wxml
@@ -8,7 +8,7 @@
         <view class="weui-flex__item weui-flex-column goods-info">
           <view class='ellipsis  weui-flex-column__item'>{{item.name}}</view>
           <view class='weui-flex-column__item'>
-            <text class='saleprice'>￥{{item.price}}</text>  
+            <text class='saleprice'>￥{{item.shop_price}}</text>  
             <text class='originalprice'>￥{{item.market_price}}</text>
           </view>
           <view class='weui-flex-column__item'>
@@ -25,7 +25,6 @@
                 <image class='delete-btn' src='/images/delete-black.png' data-index="{{index}}" bindtap='deleteItem'></image>
               </view>
             </view>
-            
           </view>
         </view>
       </view>
@@ -38,10 +37,10 @@
       <view class="count">
           <text>合计：￥</text>{{count}}
       </view>
-      <view class="order">去付款</view>
+      <view class="order" bindtap='goPay'>去提交</view>
     </view>
   </view>
-  <view class='empty' wx:if="{{show2}}">
+  <view class='empty' wx:else>
     <image src="/images/car.png" class="empty-car"></image> 
     <text>去添加点什么吧</text>    
   </view>
