--- a/pages/MemberInfo/accountManagement/accountManagement.wxml
+++ b/pages/MemberInfo/accountManagement/accountManagement.wxml
@@ -4,12 +4,12 @@
     <view class="am-update weui-flex weui_bottom">
       <image src='/images/vip.png'></image>
       <text>真实姓名：</text>
-      <input name="username" value='{{username}}' disabled='true'/>
+      <input name="username" value='{{userInfo.UserName}}' disabled='true'/>
     </view>
     <view class="am-update weui-flex weui_bottom">
       <image src='/images/vip.png'></image>
       <text>手机号码：</text>
-      <input name="phonenumber" type="number" value='{{telNumber}}'/>
+      <input name="phonenumber" type="number" value='{{userInfo.Userphone}}'/>
     </view>
     <view class="am-update weui-flex weui_bottom weui-arrow-right">
       <image src='/images/vip.png'></image>
