--- a/pages/MemberInfo/billingDetails/billingDetails.wxml
+++ b/pages/MemberInfo/billingDetails/billingDetails.wxml
@@ -2,13 +2,13 @@
 <view class="body">
   <view class="m-my-tab weui-flex">
     <view class="tabbars weui-flex__item {{tabbars1?'on':' '}}" bindtap="tabbars1Fn">商品销售</view>
-    <view class="tabbars weui-flex__item  {{tabbars2?'on':' '}}" bindtap="tabbars2Fn">业务奖励</view>
-    <view class="tabbars weui-flex__item  {{tabbars3?'on':' '}}" bindtap="tabbars3Fn">金币余额</view>
-    <view class="tabbars weui-flex__item  {{tabbars4?'on':' '}}" bindtap="tabbars4Fn">积分余额</view>
+    <view class="tabbars weui-flex__item {{tabbars2?'on':' '}}" bindtap="tabbars2Fn">业务奖励</view>
+    <view class="tabbars weui-flex__item {{tabbars3?'on':' '}}" bindtap="tabbars3Fn">金币余额</view>
+    <view class="tabbars weui-flex__item {{tabbars4?'on':' '}}" bindtap="tabbars4Fn">积分余额</view>
   </view>
   <scroll-view class="scrollView" style="height:{{srollHeight}}px;" scroll-y="true"  scroll-with-animation="true" bindscroll="scroll" scroll-top="100">
     <view class="tabbar-list">
-      <view class="tabbar-list-item" wx:if="{{tabbars1}}">
+      <view class="tabbar-list-item">
         <view class="weui-flex tab-list-liem-list" style="font-weight: bold">
           <view class="weui-flex__item">操作人</view>
           <view class="weui-flex__item">流水金额</view>
@@ -41,15 +41,6 @@
             <view class="weui-flex__item">{{item.Time}}</view>
           </view>
         </block>
-      </view>
-      <view class="tabbar-list-item" wx:if="{{tabbars2}}">
-        业务奖励
-      </view>
-      <view class="tabbar-list-item" wx:if="{{tabbars3}}">
-        金币余额
-      </view>
-      <view class="tabbar-list-item" wx:if="{{tabbars4}}">
-        积分余额
       </view>
     </view>
   </scroll-view>
