--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -3,6 +3,7 @@
     height: 150rpx;
     padding: 0 20rpx;
     background-color: #ffffff;
+    border-bottom: 1rpx solid #d9d9d9;
 }
 .order-address-l{
     align-self: center;
@@ -35,6 +36,10 @@
 .order-product-item{
     padding: 16rpx 35rpx;
     background-color: #ffffff;
+    border-bottom: 1rpx solid #d9d9d9
+}
+.order-product-item:last-child{
+   border-bottom:none;
 }
 .order-product-item-pic{
     width: 80px;
@@ -45,11 +50,11 @@
     width: 80px;
     height: 80px;
 }
-.order-item-title{
+/* .order-item-title{
   font-size:15px;
   height:40px;
   line-height:1.2;
-}
+} */
 .order-commit{
   position: fixed;
   width: 100%;
@@ -69,35 +74,45 @@
   text-align: center;
   color: #ffffff
 }
+.saleprice{
+  color:#F02B2B;
+  font-size: 16px;
+}
+.originalprice{
+  color:#999;
+  margin-left:5px; 
+  font-size: 13px;
+  text-decoration:line-through;
+}
 /*加减  */
 /*主容器*/  
 .stepper {   
-    height: 26px;  
+    height: 50rpx;  
+    width: 165rpx;
     /*给主容器设一个边框*/  
-    border: 1px solid #ccc;  
-    border-radius: 3px;
-    width: 82px;
+    border: 1rpx solid #ccc;  
+    border-radius: 3rpx;   
 }  
 /*加号和减号*/  
 .stepper text {  
-    width: 25px;  
-    line-height: 26px;  
+    width: 50rpx;  
+    line-height: 50rpx;  
     text-align: center;  
     float: left;  
 }  
 /*数值*/  
 .stepper input {  
-    width: 30px;  
-    height: 26px;  
+    width: 60rpx;  
+    height: 50rpx;  
     float: left;  
     margin: 0 auto;  
     text-align: center;  
     font-size: 12px;  
     min-height:auto;
     /*给中间的input设置左右边框即可*/  
-    border-left: 1px solid #ccc;  
-    border-right: 1px solid #ccc;  
-}   
+    border-left: 1rpx solid #ccc;  
+    border-right: 1rpx solid #ccc;  
+}     
 /*普通样式*/  
 .stepper .normal{  
     color: black;  
