--- a/pages/MemberInfo/accountManagement/accountManagement.wxml
+++ b/pages/MemberInfo/accountManagement/accountManagement.wxml
@@ -11,7 +11,7 @@
       <text>手机号码：</text>
       <input name="phonenumber" type="number" value='{{userInfo.Userphone}}'/>
     </view>
-    <view class="am-update weui-flex weui_bottom weui-arrow-right">
+    <!-- <view class="am-update weui-flex weui_bottom weui-arrow-right">
       <image src='/images/vip.png'></image>
       <text>姓别：</text>
       <view class='weui-flex__item'>
@@ -19,7 +19,7 @@
           <text>{{array[index]}}</text>
         </picker> 
       </view>
-    </view>
+    </view> -->
     <view class="am-update weui-flex weui_bottom">
       <image src='/images/vip.png'></image>
       <text>开户行：</text>
@@ -27,19 +27,14 @@
     </view>
     <view class="am-update weui-flex weui_bottom">
       <image src='/images/vip.png'></image>
-      <text>开户行地址：</text>
-      <input name="bankaddress" />
-    </view>
-    <view class="am-update weui-flex weui_bottom">
-      <image src='/images/vip.png'></image>
       <text>银行卡号：</text>
       <input name="cardnumber" type="number" />
     </view>
-    <view class="am-update weui-flex weui_bottom weui-arrow-right" bindtap="toNativeAddress">
+    <!-- <view class="am-update weui-flex weui_bottom weui-arrow-right" bindtap="toNativeAddress">
       <image src='/images/vip.png'></image>
       <text>收货地址：</text>
       <text class='ellipsis weui-flex__item'>{{address}}</text>
-    </view>
+    </view> -->
     <view class="am-btn">
       <button type="default" formType="submit">变更</button>
     </view>
