--- a/pages/loginRegister/register/register.wxml
+++ b/pages/loginRegister/register/register.wxml
@@ -16,36 +16,33 @@
     <view class="am-update weui-flex weui_bottom">
       <image src='/images/vip.png'></image>
       <text>真实姓名：</text>
-      <input name="username" placeholder='请填写真实姓名'/>
+      <input name="memberName" placeholder='请填写真实姓名'/>
     </view>
     <view class="am-update weui-flex weui_bottom">
       <image src='/images/vip.png'></image>
       <text>手机号码：</text>
-      <input name="phonenumber" type="number" placeholder='请填写手机号码'/>
+      <input name="memPhone" type="number" placeholder='请填写手机号码'/>
     </view>
-    <view class="am-update weui-flex weui_bottom weui-arrow-right">
+    <view class="am-update weui-flex weui_bottom">
       <image src='/images/vip.png'></image>
-      <text>姓别：</text>
-      <view class='weui-flex__item'>
-        <picker bindchange="bindPickerChange" value="{{index}}" range="{{array}}">
-          <text>{{array[index]}}</text>
-        </picker> 
-      </view>
+      <text>身份证号码：</text>
+      <input name="perNo" type="idcard" value='{{perNo}}' bindblur='setperNo' placeholder='请填写身份证号码'/>
     </view>
     <view class="am-update weui-flex weui_bottom">
       <image src='/images/vip.png'></image>
       <text>开户行：</text>
-      <input name="bank" placeholder='请填写开户行信息'/>
+      <input name="BanName" placeholder='请填写开户银行'/>
     </view>
     <view class="am-update weui-flex weui_bottom">
       <image src='/images/vip.png'></image>
       <text>银行卡号：</text>
-      <input name="cardnumber" type="number" placeholder='请填写银行卡号'/>
+      <input name="AccountNo" type="number" placeholder='请填写银行卡号'/>
     </view>
     <view class="am-update weui-flex weui_bottom">
       <image src='/images/vip.png'></image>
-      <text>开户行地址：</text>
-      <input name="bankaddress" placeholder='请填写开户行地址' />
+      <text>登录名：</text>
+      <input name="UserAcoount" disabled placeholder='点击按钮获取登录名' value='{{returnCode}}' />
+      <button type="default" disabled="{{getUserAcoount}}" bindtap='postUserAccount'>获取</button>
     </view>
     <view class="am-btn">
       <button type="default" formType="submit">开通会员</button>
