--- a/pages/details/details.wxml
+++ b/pages/details/details.wxml
@@ -1,12 +1,15 @@
 <!--details.wxml-->
-<view class="body">
-  <view class="swiper">
+<view class="swiper">
+  <view>
     <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
-      <block wx:for="{{imgUrls}}">
+      <swiper-item>
+          <image src="{{image_default}}" class="slide-image" width="100%" height="150"/>
+      </swiper-item>
+       <block wx:for="{{imgUrls}}">
         <swiper-item>
-          <image src="{{item}}" class="slide-image" width="100%" height="150"/>
+          <image src="{{item.img_url}}" class="slide-image" width="100%" height="150"/>
         </swiper-item>
-      </block>
+      </block> 
     </swiper>
   </view>
   <view class="detail-info">
